2006-03-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: fix ucAllowFullPageBitstream for
	ATmega640/1280/1281.
	* configure.ac: bump version to post-2.4

2006-01-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* Release version 2.4.

2006-01-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: bump version to 2.4
	* INSTALL-FROM-CVS: adapt instructions for the auto* tools; we
	are not very picky about the exact versions as long as they are
	reasonably recent.

2005-11-17    <dgay@intel-research.net>


	* src/jtag2io.cc (sendJtagCommand): breakpoint handling was broken
	(breakpoints detected in recv, but jtagContinue called recvFrame).
	Fix by moving it all into jtagContinue. 
	Also add extra debug output.
	* src/jtag2.h (class jtag2): see jtag2io.cc.
	* src/jtag2run.cc (jtagContinue): see jtag2io.cc.

	* scripts/ice-gdb.in: gdb's -- options can also be used with a single
	dash

	* src/utils.cc (statusOut): send debug output to stderr

2005-10-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: add ATmega640/1280/1281

2005-09-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	*  src/jtag2usb.cc: fix the libusb handling, so it will
	eventually also work with libusb-win32.

2005-08-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: set ucPCMaskHigh to 0 for ATmega329x/649x.

2005-08-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: add the ATmega329x/649x family.

2005-08-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: add check for libusb.
	* src/Makefile.am: add jtag2usb.cc.
	* src/jtag.h: add USB stuff to jtag class.
	* src/jtag2io.cc (jtag2::~jtag2()): do not prematurely return,
	use an "if" statement instead.
	* src/jtaggeneric.cc: add USB hooks (depending on configuration).
	* src/jtag2usb.cc: New file: implement USB communication.
	* doc/avarice.1: Document the USB connection method.

2005-08-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
